fix frontend, fix spelling, fix docker file

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -102,7 +102,7 @@ textarea {
     max-width: 400px;
   }
   &-button {
-    margin-left: 10px;
+    color: #ffffff;
     cursor: pointer;
     display: inline-block;
     vertical-align: middle;
